--- a/geomap.css
+++ b/geomap.css
@@ -59,12 +59,12 @@
     overflow-y: scroll;
     align-items: normal;
     justify-content: left;
+    display: block;
 }
 
 #info-popup-byDate-content p, #info-popup-byDate-content h2{
     overflow-wrap: anywhere;
-    padding: 1px;
-    margin: 8px 5px;
+    margin: 8px 10px;
 }
 
 #info-popup-byDate-content h2{
@@ -72,14 +72,34 @@
 }
 
 .info-popup-paragraph{
-    font-size: 1em;
+    font-size: 1.8vh;
 }
 
 .info-popup-cities{
-    font-size: 0.8em;
+    font-size: 1.5vh;
     font-style: italic;
+    padding: 0px 5%;
 }
 
+#info-popup-Legend{
+    font-size: 1.6vh;
+    justify-content: center;
+    display: flex;
+}
+
+#info-popup-Legend ul {
+    list-style: none;
+    border: 1px dotted rgba(255, 255, 255, 0.8);
+    border-radius: 6%;
+    padding: 8px;
+    margin: 4px;
+}
+
+#info-popup-Legend ul li {
+    display: flex;
+    justify-content: center;
+    color: #ffe640;
+}
 
 /* Hidden state for popup */
 .hidden {
@@ -108,6 +128,29 @@
 }
 #info-popup-content a{
     color: yellow
+}
+
+/* Map Controls UI */
+
+#map-controls {
+    max-width: 100%;
+}
+
+#map-date-slider{
+    width: 84%;
+    margin: 0 8%;
+}
+
+#map-date-slider-info{
+    display: inline-block;
+    width: 100%;
+}
+
+.map-date-slider-name{
+    display: inline-block;
+    width: 16%;
+    text-align: center;
+    padding: 3px;
 }
 
 
@@ -145,36 +188,13 @@
     }
 }
 
-/* Map Controls UI */
-
-#map-controls {
-    max-width: 100%;
-}
-
-#map-date-slider{
-    width: 84%;
-    margin: 0 8%;
-}
-
-#map-date-slider-info{
-    display: inline-block;
-    width: 100%;
-}
-
-.map-date-slider-name{
-    display: inline-block;
-    width: 16%;
-    text-align: center;
-    padding: 3px;
-}
-
 #map{
     transition-duration: display 200ms;
 }
 
 /* Tooltip CSS */
 .leaflet-tooltip{
-    font-size: 1.2rem;
+    font-size: 2vh;
     padding: 6px;
     pointer-events: none;
     box-shadow: 0 1px 3px rgba(0,0,0,0.4);
